# llvm-ir-taint

./: Cargo.toml  README.md  rustfmt.toml
src/: config.rs  function_summary.rs  function_taint_state.rs  globals.rs  lib.rs  lib_old.rs  module_taint_result.rs  module_taint_state.rs  modules.rs  named_structs.rs  pointee.rs  taint_result.rs  taint_state.rs  tainted_type.rs  worklist.rs
tests/: basic.rs  call.rs  globals.rs  loop.rs  struct.rs
tests/additional_bcfiles/: Makefile  struct.bc  struct.c  struct.ll
