[package]
name = "llvm-ir-taint"
version = "0.1.0"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5.3"
itertools = "0.9"
llvm-ir = { version = "0.7.1", features = ["llvm-10"] }
llvm-ir-analysis = { path = "../llvm-ir-analysis" }
log = "0.4.11"

[dev-dependencies]
env_logger = "0.7.1"
